<resources>
    <string name="app_name">Save Me - Beta</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="create">Create New User</string>
    <string name="login">Login</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>

    <string-array name="blood">
        <item>AB+</item>
        <item>AB-"</item>
        <item>A+"</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Save Me</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_account">Account</string>
    <string name="menu_heartrate">Heart Rate</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_news">News</string>
    <string name="menu_userinterface">Emergency</string>
    <string name="menu_closepeople">Close people</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
