<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="494dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="123dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:src="@drawable/applogo" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />


        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_register"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_register"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/colorText" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


</RelativeLayout>
